--- a/week6/css/ralative.css
+++ b/week6/css/ralative.css
@@ -18,15 +18,15 @@ body {
 }
 
 .container {
-    width: 80%;
+    width: 70%;
     margin: auto;
     text-align: center;
-    padding: 40px 0;
+    padding: 30px 0;
 }
 
 h1 {
-    font-size: 28px;
-    margin-bottom: 18px;
+    font-size: 22px;
+    margin-bottom: 10px;
 
 }
 
@@ -53,7 +53,7 @@ h1 {
 
 .readmore {
     display: block;
-    margin-top: 8px;
+    margin-top: 6px;
     margin-left: 30px;
     font-weight: bold;
     color: #2ecc71;
@@ -62,7 +62,8 @@ h1 {
 
 p {
     color: #666;
-    font-size: 14px;
+    font-size: 12px;
     max-width: 550px;
     margin: auto;
+    margin-bottom: px;
 }
